am adaugat logica de Challenge COMPLETED -> User.points = user.points+Challenge.points, doar daca nu era deja completed (#72)